fixing screen width on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,10 +4,11 @@ main {
   font-family: Graphik, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, Helvetica, Arial, sans-serif;
   hyphens: auto;
   font-size: 32px;
-  line-height: 1.65;
+  line-height: 1.25;
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  min-width: 768px;
   text-align: left;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
